--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sagalbot/vue-select.git"
+    "url": "https://github.com/chatlands/vue-select.git"
   },
   "peerDependencies": {
     "vue": "3.x"
@@ -36,6 +36,7 @@
     "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/runtime": "^7.4.2",
+    "@semantic-release/npm": "^7.0.3",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.4",
     "@vue/compiler-sfc": "^3.0.2",
